# zug-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml
zug/: Cargo.toml
zug-macros/: Cargo.toml
zug-macros/src/: lib.rs
zug/examples/: cli_worker.rs  delayed.rs  producer-demo.rs  unique.rs
zug/src/: cli.rs  job.rs  lib.rs  middleware.rs  processor.rs  redis_client.rs  registry.rs  schedule.rs  stats.rs  worker.rs
zug/tests/: cli_registry_test.rs  duplicate_worker_name_test.rs  process_async_test.rs  process_cron_job_test.rs  process_scheduled_job_test.rs  process_unique_job_test.rs  registry_test.rs  server_middleware_test.rs
