[package]
name = "zug-examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
async-trait = "0.1"
bb8 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
zug = { path = "../zug" }